--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <h1>Escuela 1-029 "Procesa Sarmiento"</h1>
     </header>
 
-    <div alt="barra de navegacion">
-      <nav class="navbar navbar-dark bg-primary navbar-expand-lg">
+    <div class="barra" alt="barra de navegacion">
+      <nav class="navbar navbar-dark bg-transparent navbar-expand-sm">
         <div class="container-fluid">
           <button
             class="navbar-toggler"
@@ -40,22 +40,16 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="desarrollo.html">Himno</a>
+                <a class="nav-link barra" href="desarrollo.html"> Himno </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="desarrollo.html"
-                  >Equipo Directivo - Planta Funcional</a
-                >
+              <li class="nav-item barra">
+                <a class="nav-link" href="desarrollo.html"> Equipo </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="desarrollo.html"
-                  >Biografia de Procesa Sarmiento</a
-                >
+              <li class="nav-item barra">
+                <a class="nav-link" href="desarrollo.html"> Biografia </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="desarrollo.html"
-                  >Proyectos Institucionales</a
-                >
+              <li class="nav-item barra">
+                <a class="nav-link" href="desarrollo.html"> Proyectos </a>
               </li>
             </ul>
           </div>
